blocks/teaser-grid/teaser-grid.css
.section .teaser-grid-wrapper {
    margin: 0;
    padding: 0;
    width: 100%;
}

.block.teaser-grid {
    --grid-row-count: 1;
    --grid-col-count: 2;
    --grid-col-gap: 15px;
    --grid-row-gap: 15px;

    position: relative;
    padding-bottom: calc(100% * var(--grid-col-count) + var(--grid-row-gap) * (var(--grid-col-count) - 1));
}

.block.teaser-grid>ul {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    list-style: none;
    margin: 0;
    padding: 0;
    display: grid;
    row-gap: var(--grid-row-gap);
    column-gap: var(--grid-col-gap);
    grid-template-rows: repeat(calc(var(--grid-col-count) * var(--grid-row-count), 1fr));
}

.block.teaser-grid>ul>li {
    --grid-row-span: 1;

    grid-row: span var(--grid-row-span);
    position: relative;
}

.block.teaser-grid>ul>li>* {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
}

.block.teaser-grid>ul>li img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.block.teaser-grid>ul>li div {
    pointer-events: none;
    cursor: pointer;
    top: unset;
    right: unset;
    bottom: 30px;
    left: 30px;
    color: white;
}

.block.teaser-grid>ul>li h3 {
    font-family: var(--ff-volvo-novum-medium);
    font-size: 2.4rem;
    line-height: 1.3333;
    margin: 0 0 0.3333em;
    font-weight: bold;
}

.block.teaser-grid>ul>li p {
    font-family: var(--ff-volvo-novum-medium);
    line-height: 1.5;
    margin: 0;
    font-weight: bold;
}

.block.teaser-grid>ul>li a:any-link {
    color: white;
}

.block.teaser-grid>ul>li .link-with-video .video-icon-wrapper {
    top: 50%;
    left: 50%;
    color: var(--volvo-text-gray);
    pointer-events: inherit;
}

@media screen and (min-width: 992px) {
    .block.teaser-grid {
        --grid-row-gap: 10px;

        padding-bottom: 50%;
    }

    .block.teaser-grid>ul {
        grid-template-rows: repeat(var(--grid-row-count), 1fr);
        grid-template-columns: repeat(var(--grid-col-count), 1fr);
        grid-auto-flow: column;
    }

    .block.teaser-grid.layout-8-4>ul {
        grid-template-columns: 8fr 4fr;
    }

    .block.teaser-grid.layout-7-5>ul {
        grid-template-columns: 7fr 5fr;
    }
}

